V2502-change of 3 comp names - SF

--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -240,10 +240,10 @@
             ComponentName="220-SEPARATION" Canvas.Left="917" Canvas.Top="181" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="210-DISCH" Canvas.Left="626" Canvas.Top="653" />
+            ComponentName="210-DISCHARGE" Canvas.Left="626" Canvas.Top="653" />
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="220-DISCH" Canvas.Left="1049" Canvas.Top="701" />
+            ComponentName="220-DISCHARGE" Canvas.Left="1049" Canvas.Top="701" />
         <Labels:DeviceLabel 
             ComponentName="210-71-ECS3" HorizontalAlignment="Center" Canvas.Left="118" Canvas.Top="118" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
@@ -264,7 +264,5 @@
             JumpFromLabel="210-21-CV1" 
             JumpToLabel="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="389" Canvas.Top="277" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Canvas.Left="1012" Canvas.Top="181" />
-        <Labels:DeviceLabel 
-            ComponentName="210-71-ECS8" Canvas.Left="358" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    </Canvas>
+  </Canvas>
 </UserControl>
