--- a/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
@@ -482,8 +482,6 @@
             ComponentName="430-SEP-DISTR" Canvas.Left="843" Canvas.Top="145"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="430-DISTRIBUTORS" DetailsPageName="D430_2" HideComponentName="True" Canvas.Left="937" Canvas.Top="145"/>
         <Labels:DeviceLabel 
-            ComponentName="420-DISCH" Canvas.Left="481" Canvas.Top="547" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel 
-            ComponentName="420-71-ECS8" Canvas.Left="252" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    </Canvas>
+            ComponentName="420-DISCHARGE" Canvas.Left="481" Canvas.Top="547" HorizontalAlignment="Left" VerticalAlignment="Center" />
+  </Canvas>
 </UserControl>
